2010-04-16  James Wilkinson  <james@slor.net>
* win32/atari_win32.c: correct keystroke auto-repeat

2010-03-23  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/USAGE, atari.c, configure.ac, mzpokeysnd.c, pbi.c, pbi_xld.[ch],
pokey.c, pokeysnd.c, votrax.c, new files: voicebox.[ch], votraxsnd.[ch]:
emulate the Alien Group Voice Box I and II


2010-01-29  Piotr Fusik  <fox@scene.pl>
* ui.h, ui_basic.c: changed source code from CRLF to LF


2010-01-27  Perry McFarlane  <perry_m@fastmail.fm>
* af80.[ch], atari.c: fix coldstart for AF80.


2010-01-21  James Wilkinson  <james@slor.net>
* win32/render_direct3d.cpp: disable extended functions if supporting runtime not installed.

* configure.ac: remove dependency on libd3dx9.


2010-01-19  James Wilkinson  <james@slor.net>
* pbi_proto80.c: prevent extra carriage return in config file setting.

* win32/sound.c: don't try to reinit sound (causes crash) if -nosound was used.


2010-01-18  James Wilkinson  <james@slor.net>
* ui.[ch], win32/atari_win32.c, win32/render_direct3d.*, win32/render_gdi.c, win32/render_gdiplus.cpp, win32/screen_win32.[ch]: committed updated DirectX display enhancements from David Dahlstrom.

* pbi_bb.c, pbi_mio.c, pbi_xld.c: prevent extra carriage returns in config file rom settings.


2010-01-17  James Wilkinson  <james@slor.net>
* configure.ac: define SUPPORTS_PLATFORM_CONFIGSAVE and SUPPORTS_PLATFORM_CONFIGURE for DirectX build.


2010-01-14  Piotr Fusik  <fox@scene.pl>
* win32/msc/config.h: #define WIN32 -> HAVE_WINDOWS_H

* win32/render_gdi.obj: was incidentally committed


2010-01-13  James Wilkinson  <james@slor.net>
* configure.ac: removed -Wredundant-decls for BeOS

* configure.ac, ui.c, win32/render_*.*, win32/screen_win32.[ch], win32/main.*:
  Changes to support new DirectX code under gcc.

* configure.ac, atari.[ch], atari_sdl.c, compfile.c, devices.c, platform.h, pokey.c, rdevice.c, rtime.c, ui.[ch], ui_basic.c, util.[ch], wince/port/missing.h: