@@ -1227,6 +1227,9 @@ int PLATFORM_Keyboard(void)
 	case SDLK_F10:
 		key_pressed = 0;
 		return INPUT_key_shift ? AKEY_SCREENSHOT_INTERLACE : AKEY_SCREENSHOT_INTERLACE;
+	case SDLK_F12:
+		key_pressed = 0;
+		return AKEY_TURBO;
 	}
 
 	/* keyboard joysticks: don't pass the keypresses to emulation
